# blurt

./: .gitignore  LICENSE  README.md  pyproject.toml
blurt/: __init__.py  __main__.py  app.py  audio.py  cleanup.py  config.py  hardware.py  hotkey.py  inject.py  types.py
blurt/assistant/: __init__.py  calendar_backend.py  intents.py  llm.py  nldate.py  router.py  system_actions.py  types.py
blurt/engines/: __init__.py  apple_speech_engine.py  faster_whisper_engine.py
docs/: SWIFT-V2.md
tests/: conftest.py  test_audio_gain.py  test_cleanup.py  test_config.py  test_hardware.py  test_intents.py  test_nldate.py  test_router.py
